registry rework
Rework registry format to support oidc_claim_sub and update return format for some endpoints
