# server/swagger_server/models/project_long.py
@@ -6,6 +6,7 @@ from datetime import date, datetime  # noqa: F401
 from typing import List, Dict  # noqa: F401
 
 from swagger_server.models.base_model_ import Model
+from swagger_server.models.people_short import PeopleShort  # noqa: F401,E501
 from swagger_server import util
 
 
@@ -14,7 +15,7 @@ class ProjectLong(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, uuid: str=None, name: str=None, description: str=None, facility: str=None, tags: List[str]=None, project_leads: List[str]=None, facility_operators: List[str]=None, project_owners: List[str]=None, project_members: List[str]=None):  # noqa: E501
+    def __init__(self, uuid: str=None, name: str=None, description: str=None, facility: str=None, tags: List[str]=None, created_time: str=None, created_by: PeopleShort=None, project_owners: List[PeopleShort]=None, project_members: List[PeopleShort]=None):  # noqa: E501
         """ProjectLong - a model defined in Swagger
 
         :param uuid: The uuid of this ProjectLong.  # noqa: E501
@@ -27,14 +28,14 @@ class ProjectLong(Model):
         :type facility: str
         :param tags: The tags of this ProjectLong.  # noqa: E501
         :type tags: List[str]
-        :param project_leads: The project_leads of this ProjectLong.  # noqa: E501
-        :type project_leads: List[str]
-        :param facility_operators: The facility_operators of this ProjectLong.  # noqa: E501
-        :type facility_operators: List[str]
+        :param created_time: The created_time of this ProjectLong.  # noqa: E501
+        :type created_time: str
+        :param created_by: The created_by of this ProjectLong.  # noqa: E501
+        :type created_by: PeopleShort
         :param project_owners: The project_owners of this ProjectLong.  # noqa: E501
-        :type project_owners: List[str]
+        :type project_owners: List[PeopleShort]
         :param project_members: The project_members of this ProjectLong.  # noqa: E501
-        :type project_members: List[str]
+        :type project_members: List[PeopleShort]
         """
         self.swagger_types = {
             'uuid': str,
@@ -42,10 +43,10 @@ class ProjectLong(Model):
             'description': str,
             'facility': str,
             'tags': List[str],
-            'project_leads': List[str],
-            'facility_operators': List[str],
-            'project_owners': List[str],
-            'project_members': List[str]
+            'created_time': str,
+            'created_by': PeopleShort,
+            'project_owners': List[PeopleShort],
+            'project_members': List[PeopleShort]
         }
 
         self.attribute_map = {
@@ -54,8 +55,8 @@ class ProjectLong(Model):
             'description': 'description',
             'facility': 'facility',
             'tags': 'tags',
-            'project_leads': 'project_leads',
-            'facility_operators': 'facility_operators',
+            'created_time': 'created_time',
+            'created_by': 'created_by',
             'project_owners': 'project_owners',
             'project_members': 'project_members'
         }
@@ -64,8 +65,8 @@ class ProjectLong(Model):
         self._description = description
         self._facility = facility
         self._tags = tags
-        self._project_leads = project_leads
-        self._facility_operators = facility_operators
+        self._created_time = created_time
+        self._created_by = created_by
         self._project_owners = project_owners
         self._project_members = project_members
 
@@ -186,85 +187,85 @@ class ProjectLong(Model):
         self._tags = tags
 
     @property
-    def project_leads(self) -> List[str]:
-        """Gets the project_leads of this ProjectLong.
+    def created_time(self) -> str:
+        """Gets the created_time of this ProjectLong.
 
 
-        :return: The project_leads of this ProjectLong.
-        :rtype: List[str]
+        :return: The created_time of this ProjectLong.
+        :rtype: str
         """
-        return self._project_leads
+        return self._created_time
 
-    @project_leads.setter
-    def project_leads(self, project_leads: List[str]):
-        """Sets the project_leads of this ProjectLong.
+    @created_time.setter
+    def created_time(self, created_time: str):
+        """Sets the created_time of this ProjectLong.
 
 
-        :param project_leads: The project_leads of this ProjectLong.
-        :type project_leads: List[str]
+        :param created_time: The created_time of this ProjectLong.
+        :type created_time: str
         """
 
-        self._project_leads = project_leads
+        self._created_time = created_time
 
     @property
-    def facility_operators(self) -> List[str]:
-        """Gets the facility_operators of this ProjectLong.
+    def created_by(self) -> PeopleShort:
+        """Gets the created_by of this ProjectLong.
 
 
-        :return: The facility_operators of this ProjectLong.
-        :rtype: List[str]
+        :return: The created_by of this ProjectLong.
+        :rtype: PeopleShort
         """
-        return self._facility_operators
+        return self._created_by
 
-    @facility_operators.setter
-    def facility_operators(self, facility_operators: List[str]):
-        """Sets the facility_operators of this ProjectLong.
+    @created_by.setter
+    def created_by(self, created_by: PeopleShort):
+        """Sets the created_by of this ProjectLong.
 
 
-        :param facility_operators: The facility_operators of this ProjectLong.
-        :type facility_operators: List[str]
+        :param created_by: The created_by of this ProjectLong.
+        :type created_by: PeopleShort
         """
 
-        self._facility_operators = facility_operators
+        self._created_by = created_by
 
     @property
-    def project_owners(self) -> List[str]:
+    def project_owners(self) -> List[PeopleShort]:
         """Gets the project_owners of this ProjectLong.
 
 
         :return: The project_owners of this ProjectLong.
-        :rtype: List[str]
+        :rtype: List[PeopleShort]
         """
         return self._project_owners
 
     @project_owners.setter
-    def project_owners(self, project_owners: List[str]):
+    def project_owners(self, project_owners: List[PeopleShort]):
         """Sets the project_owners of this ProjectLong.
 
 
         :param project_owners: The project_owners of this ProjectLong.
-        :type project_owners: List[str]
+        :type project_owners: List[PeopleShort]
         """
 
         self._project_owners = project_owners
 
     @property
-    def project_members(self) -> List[str]:
+    def project_members(self) -> List[PeopleShort]:
         """Gets the project_members of this ProjectLong.
 
 
         :return: The project_members of this ProjectLong.
-        :rtype: List[str]
+        :rtype: List[PeopleShort]
         """
         return self._project_members
 
     @project_members.setter
-    def project_members(self, project_members: List[str]):
+    def project_members(self, project_members: List[PeopleShort]):
         """Sets the project_members of this ProjectLong.
 
 
         :param project_members: The project_members of this ProjectLong.
-        :type project_members: List[str]
+        :type project_members: List[PeopleShort]
         """
 
         self._project_members = project_members
